#3 A játék indításához bármelyik arrow gombot kell lenyomni. Teszt: az arrow lenyomásakor kiírja hogy up/down/left/right, attól függően melyik gombot nyomtuk meg

--- a/Snake_2/Snake_2.csproj
+++ b/Snake_2/Snake_2.csproj
@@ -68,6 +68,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Arena.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
