#3:probléma az ArenaPosition HeadPosition property-vel

--- a/Snake_2/Snake_2.csproj
+++ b/Snake_2/Snake_2.csproj
@@ -72,6 +72,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Arena.cs" />
+    <Compile Include="Model\ArenaPosition.cs" />
+    <Compile Include="Model\Snake.cs" />
+    <Compile Include="Model\SnakeHeadDirectionEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
